--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arithmetic</title>
+    <script>
+        function add(){
+            x =parseInt(f1.tb1.value)
+            y =parseInt(f1.tb2.value)
+            z = x+y
+            document.getElementById('tb3').value=z;
+        }
+
+        function sub(){
+            z =x-y
+            document.getElementById('tb3').value=z
+        }
+
+        function mul(){
+            z =x*y
+            document.getElementById('tb3').value=z
+        }
+
+        function div(){
+            z =x/y
+            document.getElementById('tb3').value=z
+        }
+
+        function mod(){
+            z =x%y
+            document.getElementById('tb3').value=z
+        }
+    </script>
+</head>
 <body>
-
-<h2>Mukundan</h2>
-<a href="file:///C:/Users/mukun_zj9fwbw/OneDrive/Desktop/html/untitiled-123.html">About Mukunandan</a>
-
-<h1>Mukundan frame work</h1>
-<a href=untitled1231231.html>Mukundan Frames part oh my god</a>
-<h1>Contact page</h1>
-<p>email - mukundanhari24@gmail.com 
-discord - bigman#8354</p>
-
+<form id="f1">
+    Enter 1st value : <input type="text" id="tb1"><br>
+    Enter 2nd value : <input type="text" id="tb2"><br>
+    <button type="button" onclick="add()">Addition</button>
+    <button type="button" onclick="sub()">Subtraction</button>
+    <button type="button" onclick="mul()">Multiplication</button>
+    <button type="button" onclick="div()">Division</button>
+    <button type="button" onclick="mod()">Modulus</button><br>
+    Result<input type="text" id="tb3">
+</form>
 </body>
 </html>
-
-
